--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "rootDir": "./src",
     "baseUrl": "./src",
-    "types": ["node_modules/@types", "node_modules/web-ext-types"],
+    "typeRoots": ["node_modules/@types", "node_modules/web-ext-types"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
