--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@swc/core": "^1.3.96",
     "@types/node": "^20.9.1",
     "copy-webpack-plugin": "^11.0.0",
+    "path-browserify": "^1.0.1",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
     "web-ext": "^7.8.0",
