--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.mobius.cloud/qbeditor/*"],
-      "js": ["content.js"],
+      "js": ["content.js", "inject.js"],
       "run_at": "document_idle"
     }
   ],
