--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "paths": { "lib/*": ["../lib/*"] }
+    "paths": { "@lib/*": ["../lib/*"] }
   }
 }
