--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
     "dev": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
   },
   "devDependencies": {
-    "@babel/parser": "^7.23.3",
-    "@liquify/prettify": "^0.5.5-beta.1",
     "@swc/core": "^1.3.96",
     "@types/is-html": "^2.0.2",
     "@types/js-beautify": "^1.14.3",
     "@types/node": "^20.9.1",
+    "@types/pretty": "^2.0.3",
     "@types/quill": "^2.0.14",
-    "babel": "^6.23.0",
     "copy-webpack-plugin": "^11.0.0",
-    "html-prettify": "^1.0.7",
     "is-html": "^3.0.0",
     "js-beautify": "^1.14.11",
     "nanoid": "^3.3.7",
-    "prettier": "^3.1.0",
+    "pretty": "^2.0.0",
     "quill": "^1.3.6",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
@@ -32,10 +29,5 @@
     "web-ext-types": "^3.2.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "@types/babel-types": "^7.0.14",
-    "@types/pretty": "^2.0.3",
-    "pretty": "^2.0.0"
   }
 }
