--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
     "dev": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
   },
   "devDependencies": {
+    "@editorjs/editorjs": "^2.28.2",
     "@swc/core": "^1.3.96",
     "@types/is-html": "^2.0.2",
     "@types/js-beautify": "^1.14.3",
     "@types/node": "^20.9.1",
     "@types/pretty": "^2.0.3",
-    "@types/quill": "^2.0.14",
     "copy-webpack-plugin": "^11.0.0",
     "is-html": "^3.0.0",
     "js-beautify": "^1.14.11",
     "nanoid": "^3.3.7",
     "pretty": "^2.0.0",
-    "quill": "^1.3.6",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
     "web-ext": "^7.8.0",
