--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/list": "^1.9.0",
     "@swc/core": "^1.3.96",
     "@types/is-html": "^2.0.2",
     "@types/js-beautify": "^1.14.3",
