--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "build": "webpack",
-    "dev": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
+    "dev": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist",
+    "lint": "eslint ./src ./lib --fix"
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.28.2",
@@ -19,7 +20,11 @@
     "@types/js-beautify": "^1.14.3",
     "@types/node": "^20.9.1",
     "@types/pretty": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "is-html": "^3.0.0",
     "js-beautify": "^1.14.11",
     "nanoid": "^3.3.7",
