--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "is-html": "^3.0.0",
     "js-beautify": "^1.14.11",
     "nanoid": "^3.3.7",
+    "prettier": "^3.1.0",
     "pretty": "^2.0.0",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
