--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@swc/core": "^1.3.96",
     "@types/is-html": "^2.0.2",
     "@types/node": "^20.9.1",
+    "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -26,6 +27,7 @@
     "is-html": "^3.0.0",
     "nanoid": "^3.3.7",
     "prettier": "^3.1.0",
+    "quill": "^1.3.7",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
     "web-ext": "^7.8.0",
