--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@editorjs/list": "^1.9.0",
     "@swc/core": "^1.3.96",
     "@types/is-html": "^2.0.2",
+    "@types/jquery": "^3.5.27",
     "@types/node": "^20.9.1",
     "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -24,10 +25,15 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.54.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "form-data-encoder": "^4.0.2",
+    "form-serialize-js": "^0.1.0",
     "is-html": "^3.0.0",
+    "jquery": "^3.7.1",
     "nanoid": "^3.3.7",
+    "object-to-formdata": "^4.5.1",
     "prettier": "^3.1.0",
     "quill": "^1.3.7",
+    "serialize-form-data": "^1.0.0",
     "swc-loader": "^0.2.3",
     "typescript": "^5.2.2",
     "web-ext": "^7.8.0",
