--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,14 @@
   "plugins": ["@typescript-eslint", "unused-imports"],
   "rules": {
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
     "unused-imports/no-unused-imports": "warn",
     "unused-imports/no-unused-vars": [
       "warn",
