--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Truong Nguyen",
   "license": "MIT",
   "private": false,
-  "description": "",
   "type": "module",
+  "description": "",
   "scripts": {
     "build": "webpack",
+    "build:svelte": "vite build svelte",
     "dev": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist",
     "lint": "eslint ./src ./lib --fix"
   },
@@ -15,30 +16,37 @@
     "@editorjs/editorjs": "^2.28.2",
     "@editorjs/header": "^2.8.1",
     "@editorjs/list": "^1.9.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@swc/core": "^1.3.96",
+    "@tsconfig/svelte": "^5.0.2",
     "@types/is-html": "^2.0.2",
     "@types/jquery": "^3.5.27",
     "@types/node": "^20.9.1",
     "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "before-build-webpack": "^0.2.13",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.54.0",
+    "eslint-plugin-svelte": "^2.35.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "form-data-encoder": "^4.0.2",
-    "form-serialize-js": "^0.1.0",
     "is-html": "^3.0.0",
     "jquery": "^3.7.1",
     "nanoid": "^3.3.7",
-    "object-to-formdata": "^4.5.1",
     "prettier": "^3.1.0",
     "quill": "^1.3.7",
-    "serialize-form-data": "^1.0.0",
+    "svelte": "^4.2.5",
+    "svelte-check": "^3.6.0",
     "swc-loader": "^0.2.3",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2",
+    "vite": "^5.0.0",
+    "vite-plugin-singlefile": "^0.13.5",
     "web-ext": "^7.8.0",
     "web-ext-types": "^3.2.1",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-shell-plugin-next": "^2.3.1",
+    "webpack-watch-files-plugin": "^1.2.1"
   }
 }
