synchronously load svelte after global vars are loaded

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,10 +11,5 @@
   ],
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "permissions": [],
-  "web_accessible_resources": [
-    "dist/assets/index-w6hcz12F.css",
-    "dist/assets/index-Tjxc2dTA.js",
-    "dist/vite.svg",
-    "vite.svg"
-  ]
+  "web_accessible_resources": ["assets/svelte.js"]
 }
