--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "autoprefixer": "^10.4.16",
     "before-build-webpack": "^0.2.13",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.54.0",
@@ -33,11 +34,13 @@
     "is-html": "^3.0.0",
     "jquery": "^3.7.1",
     "nanoid": "^3.3.7",
+    "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "quill": "^1.3.7",
     "svelte": "^4.2.5",
     "svelte-check": "^3.6.0",
     "swc-loader": "^0.2.3",
+    "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
