--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "quill": "^1.3.7",
+    "remove-files-webpack-plugin": "^1.5.0",
     "svelte": "^4.2.5",
     "svelte-check": "^3.6.0",
     "swc-loader": "^0.2.3",
