--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ./src ./lib --fix"
   },
   "devDependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
     "@editorjs/editorjs": "^2.28.2",
     "@editorjs/header": "^2.8.1",
     "@editorjs/list": "^1.9.0",
