--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "svelte-check": "^3.6.0",
     "swc-loader": "^0.2.3",
     "tailwindcss": "^3.3.5",
+    "terser-webpack-plugin": "^5.3.9",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
