--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "remove-files-webpack-plugin": "^1.5.0",
     "svelte": "^4.2.5",
     "svelte-check": "^3.6.0",
+    "svelte-grid-extended": "^1.1.4",
     "swc-loader": "^0.2.3",
     "tailwindcss": "^3.3.5",
     "terser-webpack-plugin": "^5.3.9",
