--- a/package.json
+++ b/package.json
@@ -1,65 +1,41 @@
 {
-  "name": "mobius-extra",
+  "name": "mobius-ext",
   "version": "1.0.0",
-  "author": "Truong Nguyen",
   "license": "MIT",
-  "private": false,
+  "author": " Truong Nguyen",
   "type": "module",
-  "description": "",
   "scripts": {
-    "dev": "cross-env MODULES=part webpack",
-    "dev:all": "cross-env MODULES=all webpack",
-    "webpack:svelte": "vite build svelte --watch",
-    "webext": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist",
-    "lint": "eslint ./src ./lib --fix"
-  },
-  "devDependencies": {
-    "@codemirror/lang-javascript": "^6.2.1",
-    "@editorjs/editorjs": "^2.28.2",
-    "@editorjs/header": "^2.8.1",
-    "@editorjs/list": "^1.9.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@swc/core": "^1.3.96",
-    "@tsconfig/svelte": "^5.0.2",
-    "@types/is-html": "^2.0.2",
-    "@types/jquery": "^3.5.27",
-    "@types/node": "^20.9.1",
-    "@types/quill": "^2.0.14",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "autoprefixer": "^10.4.16",
-    "before-build-webpack": "^0.2.13",
-    "codemirror": "^6.0.1",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.54.0",
-    "eslint-plugin-svelte": "^2.35.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "is-html": "^3.0.0",
-    "jquery": "^3.7.1",
-    "nanoid": "^3.3.7",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "quill": "^1.3.7",
-    "remove-files-webpack-plugin": "^1.5.0",
-    "svelte": "^4.2.5",
-    "svelte-check": "^3.6.0",
-    "svelte-grid-extended": "^1.1.4",
-    "swc-loader": "^0.2.3",
-    "tailwindcss": "^3.3.5",
-    "terser-webpack-plugin": "^5.3.9",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-singlefile": "^0.13.5",
-    "web-ext": "^7.8.0",
-    "web-ext-types": "^3.2.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-shell-plugin-next": "^2.3.1",
-    "webpack-watch-files-plugin": "^1.2.1"
+    "preinstall": "npx only-alow npm",
+    "dev": "node esbuild",
+    "type-check": "svelte-check",
+    "lint": "eslint . --fix",
+    "format": "prettier . --write",
+    "webext": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
   },
   "dependencies": {
-    "@codemirror/lang-html": "^6.4.6"
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "^20.9.3",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "autoprefixer": "^10.4.16",
+    "esbuild": "^0.19.7",
+    "esbuild-plugin-clean": "^1.0.1",
+    "esbuild-postcss": "^0.0.4",
+    "esbuild-svelte": "^0.8.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-svelte": "^2.35.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2",
+    "web-ext": "^7.8.0",
+    "web-ext-types": "^3.2.1"
   }
 }
