--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
+  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "baseUrl": "./src",
-    "typeRoots": ["node_modules/@types", "node_modules/web-ext-types"],
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "paths": { "@lib/*": ["../lib/*"] }
+    "baseUrl": "src",
+    "paths": {
+      "@lib/*": ["lib/*"],
+      "@page/*": ["page/*"],
+      "@bridge/*": ["bridge/*"]
+    },
+    "typeRoots": ["node_modules/@types", "node_modules/web-ext-types", "app.d.ts"],
+    "noEmit": true
   },
-  "exclude": ["svelte"]
+  "exclude": ["node_modules/*"]
 }
