--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.1.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-grid-extended": "^1.1.4",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
     "web-ext": "^7.8.0",
