--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-svelte": "^2.35.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "flowbite-svelte": "^0.44.19",
+    "flowbite-svelte-icons": "^0.4.5",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "svelte-grid-extended": "^1.1.4",
+    "svelte-preprocess": "^5.1.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
     "web-ext": "^7.8.0",
