--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "webext": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
   },
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.6",
     "@tsconfig/svelte": "^5.0.2",
     "@types/node": "^20.9.3",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "autoprefixer": "^10.4.16",
+    "codemirror": "^6.0.1",
     "esbuild": "^0.19.7",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-postcss": "^0.0.4",
@@ -38,6 +40,7 @@
     "svelte-grid-extended": "^1.1.4",
     "svelte-preprocess": "^5.1.1",
     "tailwindcss": "^3.3.5",
+    "thememirror": "^2.0.1",
     "typescript": "^5.3.2",
     "web-ext": "^7.8.0",
     "web-ext-types": "^3.2.1"
