--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "webext": "web-ext run --firefox-profile %APPDATA%/Mozilla/Firefox/Profiles/us9mxxgw.default-release --source-dir ./dist"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.2.1",
     "@codemirror/lang-html": "^6.4.6",
+    "@codemirror/lang-javascript": "^6.2.1",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/katex": "^0.16.7",
     "@types/node": "^20.9.3",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -33,6 +36,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "flowbite-svelte": "^0.44.19",
     "flowbite-svelte-icons": "^0.4.5",
+    "katex": "^0.16.9",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "svelte": "^4.2.7",
