--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.1.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-loading-spinners": "^0.3.4",
     "svelte-preprocess": "^5.1.1",
     "tailwindcss": "^3.3.5",
     "thememirror": "^2.0.1",
